--- a/Css/sheet.css
+++ b/Css/sheet.css
@@ -1,3 +1,7 @@
+.multi-button {
+  display: flex;
+  justify-content: center;
+}
 .multi-button button {
   height: 50px;
   width: 100px;
@@ -42,7 +46,10 @@ table tr td {
 #txt {
   display: none;
 }
-
+.txt_ae {
+  display: flex;
+  justify-content: center;
+}
 .v_txt {
   display: block;
   height: 111px;
