--- a/Css/sheet.css
+++ b/Css/sheet.css
@@ -16,7 +16,7 @@
 .multi-button :nth-child(1) {
   border-radius: 20px 0 0 20px;
 }
-.multi-button :nth-child(3) {
+.multi-button :nth-child(4) {
   border-radius: 0 20px 20px 0;
 }
 button:hover {
@@ -30,8 +30,9 @@ button:active {
 table {
   border: 1px solid;
   border-radius: 10px;
-  height: 400px;
-  width: 100%;
+  height: 200px;
+  width: 75%;
+  margin: auto;
 }
 
 table tr {
@@ -41,6 +42,8 @@ table tr {
 table tr td {
   border-radius: 10px;
   border: 1px solid;
+  width: 50px;
+  height: 50px;
 }
 
 #txt {
